# mylocraft

./: .gitignore  CMakeLists.txt  main.cpp
src/: main.cpp
src/core/: database.cpp  database.hpp
src/ui/: mainwindow.cpp  mainwindow.hpp
